[gd_scene load_steps=3 format=3 uid="uid://cyjhdgpwtj4np"]

[ext_resource type="Script" path="res://source/login_screen.gd" id="1_28dto"]
[ext_resource type="Theme" uid="uid://3c4wfofywo74" path="res://themes/main_theme.tres" id="1_f2u5o"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f2u5o")
script = ExtResource("1_28dto")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0823529, 0, 0.313726, 1)
theme_override_colors/font_shadow_color = Color(0.133333, 0, 0.239216, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 140
text = "FilmShtaiga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ServerEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Server"

[node name="UsernameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Username"

[node name="PasswordEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Login"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Exit"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/VBoxContainer/PasswordEdit" to="." method="_on_password_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
